@@ -34,11 +34,7 @@ extern "C" {
 
 #ifndef _TIME64_T_DEFINED
 #define _TIME64_T_DEFINED
-#if defined(__GNUC__) && defined(__STRICT_ANSI__)
-  typedef int _time64_t __attribute__ ((__mode__ (DI)));
-#else
   __MINGW_EXTENSION typedef __int64 __time64_t;
-#endif
 #endif
 
 #ifndef _TIME_T_DEFINED
@@ -59,11 +55,7 @@ extern "C" {
 #define _SIZE_T_DEFINED
 #undef size_t
 #ifdef _WIN64
-#if defined(__GNUC__) && defined(__STRICT_ANSI__)
-  typedef unsigned int size_t __attribute__ ((__mode__ (DI)));
-#else
   __MINGW_EXTENSION typedef unsigned __int64 size_t;
-#endif
 #else
   typedef unsigned int size_t;
 #endif
@@ -73,11 +65,7 @@ extern "C" {
 #define _SSIZE_T_DEFINED
 #undef ssize_t
 #ifdef _WIN64
-#if defined(__GNUC__) && defined(__STRICT_ANSI__)
-  typedef int ssize_t __attribute__ ((__mode__ (DI)));
-#else
   __MINGW_EXTENSION typedef __int64 ssize_t;
-#endif
 #else
   typedef int ssize_t;
 #endif
