@@ -26,11 +26,7 @@ extern "C" {
 #define __uintptr_t_defined
 #undef uintptr_t
 #ifdef _WIN64
-#if defined(__GNUC__) && defined(__STRICT_ANSI__)
-  typedef unsigned int uintptr_t __attribute__ ((__mode__ (DI)));
-#else
   __MINGW_EXTENSION typedef unsigned __int64 uintptr_t;
-#endif
 #else
   typedef unsigned long uintptr_t;
 #endif
